syntax = "proto3";

package com.giyeok.sugarproto.proto3kmp.generated;

import "google/protobuf/timestamp.proto";

service Proto3KmpTestService {
  rpc MyProtocol(MyProtocolReq) returns (MyProtocolRes);
}

message MyProtocolReq {
  string name = 1;
  int32 age = 2;
  optional string address = 3;
  repeated string family = 4;
  map<string, string> map = 5;
  google.protobuf.Timestamp plain_ts = 6;
  optional google.protobuf.Timestamp optional_ts = 7;
  repeated google.protobuf.Timestamp repeated_ts = 8;
}

message MyProtocolRes {
  string address = 1;
}
